--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/bebas-neue": "^4.5.9",
+    "@fontsource/martel-sans": "^4.5.10",
     "axios": "^1.3.4",
     "vue": "^3.2.47"
   },
