--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@fontsource/bebas-neue": "^4.5.9",
-    "@fontsource/martel-sans": "^4.5.10",
+    "@fontsource/cabin-condensed": "^4.5.9",
     "axios": "^1.3.4",
     "vue": "^3.2.47"
   },
