--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/bebas-neue": "^4.5.9",
     "@fontsource/cabin-condensed": "^4.5.9",
     "axios": "^1.3.4",
+    "flag-icon-css": "^4.1.7",
     "vue": "^3.2.47"
   },
   "devDependencies": {
